--- a/CaosNews/webcaosnews/templates/Politica.html
+++ b/CaosNews/webcaosnews/templates/Politica.html
@@ -1,100 +1,66 @@
 {% extends "base.html" %}
+{% load i18n %}
 {%load static %}
 {% block titulo %}
- "La economía va a estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa de
-        Gobierno" - Caos News
+Últimas noticias de Política en Chile - Caos News
 {% endblock titulo%}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/articulo.css' %}">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock css %}
 {% block contenido %}
-    
-    <!-- Contenido -->
-    <div class="container" style="margin-top: 15px;">
-        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'indx' %}">Inicio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Política</li>
-            </ol>
-        </nav>
-        <div class="bg-image" style="background-image: url(../static/img/politca.jpg);">
-        </div>
-        <div class="container">
-            <div id="article">
-                <div class="row aligns-items-center justify-content-center">
-                    <div class="col-sm-6 col-md-8">
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a class="nav-link active fw-bold" aria-current="page" href="#">Política</a>
-                            </li>
-                        </ul>
-                        <h1 class="mb-3 h2 text-center fw-bolder text-danger">"La economía va a estar más débil":
-                            Ministro Marcel afirma que quinto retiro podría complicar programa de
-                            Gobierno"</h1>
-                    </div>
-                    <div class="row creditos">
-                        <div class="col d-flex justify-content-between ">
-                            <span class="periodista d-flex justify-content-start fw-bold">Por Matías Bobadilla</span>
-                            <div class="redes-sociales">
-                                <ul class="d-flex justify-content-start">
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-facebook"></a></li>
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-twitter"></a></li>
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-instagram"></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="fecha">
-                            <span class="fw-light">10 abr. 2022 - 13:14 hrs. </span>
-                        </div>
-                    </div>
 
-                </div>
-                <div class="contenido-nota">
-                    <h3 class="my-3 h3 fw-bolder text-danger">El titular de Hacienda aseveró que algunos de los efectos
-                        que podría tener es que aumente aún más la inflación y que haya menos recursos fiscales.</h3>
-                    <p class="fs-4 justify-text">El ministro de Hacienda, Mario Marcel, se refirió este domingo una vez
-                        más a la posibilidad de que se apruebe un quinto retiro de los fondos de pensiones, destacando
-                        lo negativo que podría ser para la economía nacional y que incluso podría complicar la ejecución
-                        del programa de Gobierno.</p>
-                    <br>
-                    <!-- Publicidad -->
-                    <div class="relacionados d-flex aligns-items-center justify-content-center">
-                        <div class="card w-75 text-white bg-danger ">
-                            <div class="card-body">
-                                <h5 class="card-title">Te puede interesar</h5>
-                                <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>¿Quiénes son y por
-                                    qué sancionaron a las hijas de Vladimir Putin?</p>
-                                <a href="{% url 'mun' %}" class="btn btn-primary">Ver más</a>
-                            </div>
-                        </div>
+<div class="container border border-top-0">
+    <nav class="my-3"
+        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
+        aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'indx' %}">Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Política</li>
+        </ol>
+    </nav>
+    <h1 class="mb-5 h2 text-center fw-bolder text-danger">Últimas noticias de Política en Chile</h1>
+    <section id="hCard">
+        {% for reg in entity %}
+        <div class="row justify-content-center "
+            style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
+            <div class="card mb-3 border-light" style="max-width: 100%;">
+                <div class="row g-0">
+                    <div class="col-md-4 px-0">
+                        <img src="{{reg.portada.url}}" class="img-fluid rounded-start" style="height: 100%; width: 100%; object-fit: cover;" alt="...">
                     </div>
-                    <br>
-                    <p class="fs-4 justify-text">El secretario de Estado señaló que "un nuevo incremento en fondos de
-                        pensiones significa un aumento permanente de pago de intereses por parte del Estado de 2.500
-                        millones de dólares".</p>
-                    <p class="fs-4 justify-text">Fue así como destacó que "eso significa que la economía va estar más
-                        débil, va a enfrentar mayor inflación (...) Va a haber menos recursos fiscales, todas esas cosas
-                        por supuesto que dificultan el programa de gobierno", añadió.</p>
-                    <p class="fs-4 justify-text">Cabe señalar que el Gobierno se ha opuesto permanentemente a la
-                        aprobación de un eventual quinto retiro, postura que no es unánime dentro de la coalición, ya
-                        que algunos parlamentarios no han descartado apoyar la medida, pese a las advertencias de que
-                        esto podría profundizar la ya ascendente inflación.</p>
-                </div>
-                <div class="card">
-                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i>
-                        Leer más de</h5>
-                    <div class="card-body text-center">
-                        <button type="button" class="btn btn-outline-primary">Nacional</button>
-                        <button type="button" class="btn btn-outline-secondary">Gobierno</button>
-                        <button type="button" class="btn btn-outline-success">Boric</button>
-                        <button type="button" class="btn btn-outline-danger">Inflación</button>
-                        <button type="button" class="btn btn-outline-warning">Ministros</button>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ reg.titulo }}</h5>
+                         
+                            {% language 'es' %}
+                            <p class="card-text"><small class="text-muted">{{ reg.fecha }}</small></p>
+                            {% endlanguage %}
+                            <p class="card-text" id="card-text">{{ reg.contenido|truncatechars:320|striptags}}</p>
+                            
+                            <br>
+                            <a onclick="ir({{reg.id}})" class="btn btn-primary my-2">Leer más</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <hr>
+        {% endfor %}
+
+
+    </section>
+
+    <div>
+        {% include 'paginator.html' %}
+      </div>
+</div>
+
+<script>
+    function ir(id){
+      location.href='/articulo/'+id+'/';
+    }
+  </script>
+
 {% endblock contenido %}
+{% block script_final %}
+{% endblock script_final %}
