--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -83,7 +83,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="{% url 'cerrar' %}">Cerrar sesión</a></li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesión</a></li>
               </ul>
           </div>
           {% else %}
