--- a/CaosNews/webcaosnews/templates/articulo.html
+++ b/CaosNews/webcaosnews/templates/articulo.html
@@ -33,7 +33,8 @@ Noticia - Caos News
                 </div>
                 <div class="row creditos">
                     <div class="col d-flex justify-content-between ">
-                        <span class="periodista d-flex justify-content-start fw-bold">Por {{noticia.autor}}</span>
+                        <span class="periodista d-flex justify-content-start fw-bold">Por {{noticia.autor}} | {{noticia.ubicacion}}</span>
+                       
                         <div class="redes-sociales">
                             <ul class="d-flex justify-content-start">
                                 <li><a href="" class="me-4 fs-4 text-reset icon-facebook"></a></li>
