--- a/CaosNews/webcaosnews/templates/escribir.html
+++ b/CaosNews/webcaosnews/templates/escribir.html
@@ -36,6 +36,12 @@ Formulario de Publicación de Noticias - Caos News
                 <div class="mb-3 my-4">
                     {{ form.portada | as_crispy_field}}
                 </div>
+                <div class="mb-3 my-4">
+                    {{ imageForm.management_form}}
+                    {% for form in imagen %}
+                        {{ form | as_crispy_field  }}
+                    {% endfor %}
+                </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         {{ form.categoria | as_crispy_field}}
