--- a/CaosNews/webcaosnews/templates/buscarArticulo.html
+++ b/CaosNews/webcaosnews/templates/buscarArticulo.html
@@ -9,7 +9,7 @@ Buscador - Caos News
 {% endblock css %}
 {% block contenido %}
 
-{% if buscado %}
+{% if buscado  %}
 <div class="container border border-top-0">
     <nav class="my-3"
         style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
@@ -33,7 +33,7 @@ Buscador - Caos News
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">{{ reg.titulo }}</h5>
-                         
+                            <p class="card-text"><small class="text-muted"> Por {{ reg.autor }}</small></p>
                             {% language 'es' %}
                             <p class="card-text"><small class="text-muted">{{ reg.fecha }}</small></p>
                             {% endlanguage %}
@@ -47,6 +47,21 @@ Buscador - Caos News
             </div>
         </div>
         <hr>
+        {% empty %}
+
+        <div class="row justify-content-md-center mb-5">
+            <div class="col-8 col-md-8 col-lg-4 mx-auto">
+                <img class="img-fluid float-start mb-2" src="{% static 'img/sad.gif' %}" alt="">
+            </div>
+            <div class="col-sm-auto col-md-4 col-lg-4 my-auto text-center">
+                <h1 class="mb-5 h2 fw-bolder text-danger">Aquí no hay nada...</h1>
+                <p>
+                    No hemos encontrado ningún resultado para la búsqueda que has realizado &#x1F614;
+                </p>
+                <a href="{% url 'indx' %}" class="btn btn-danger my-2">Volver a la página principal</a>
+            </div>
+        </div>
+
         {% endfor %}
 
 
@@ -65,7 +80,20 @@ Buscador - Caos News
 
 {% else %}
 
-<h1 class="mb-5 h2 text-center fw-bolder text-danger">Aquí no hay nada...</h1>
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-8 col-md-8 col-lg-4 mx-auto">
+            <img class="img-fluid float-start" src="{% static 'img/sad.gif' %}" alt="">
+        </div>
+        <div class="col-sm-auto col-md-4 col-lg-4 my-auto text-center">
+            <h1 class="mb-5 h2 fw-bolder text-danger">Aquí no hay nada...</h1>
+            <p>
+                Olvidaste escribir algo en la barra de búsqueda &#x1F610;
+            </p>
+            <a href="{% url 'indx' %}" class="btn btn-danger my-2">Volver a la página principal</a>
+        </div>
+    </div>
+</div>
 
 
 {% endif %}
