Corrección de artículos

--- a/CaosNews/webcaosnews/templates/articulo.html
+++ b/CaosNews/webcaosnews/templates/articulo.html
@@ -2,7 +2,7 @@
 {%load static %}
 {% load filter_tags %}
 {% block titulo %}
-Noticia - Caos News
+{{noticia.titulo}} - Caos News
 {% endblock titulo%}
 {% block css %}
 
