--- a/CaosNews/webcaosnews/templates/panel/listado.html
+++ b/CaosNews/webcaosnews/templates/panel/listado.html
@@ -27,8 +27,8 @@ Panel Administrativo - Caos News
 </script>
 
 <div class="container-fluid">
-  <table class="table">
-    <thead>
+  <table class="table table-hover table-responsive-sm align-middle">
+    <thead class="table-dark">
       <tr>
         <th scope="col">Aprobado</th>
         <th scope="col">Título</th>
@@ -51,13 +51,14 @@ Panel Administrativo - Caos News
         <td>{{n.categoria}}</td>
         <td>{{n.fecha |date:"SHORT_DATE_FORMAT" }}</td>
         <td>
-          <a href="{% url 'modNot' n.id %}"><button type="button" class="btn btn-primary btn-sm">Modificar</button></a>
+          <a href="{% url 'modNot' n.id %}"><button type="button" class="btn btn-primary btn-sm mb-2">Modificar</button></a>
           <a href="#" onclick="eliminarNoticia({{n.id}})"><button type="button"
-              class="btn btn-danger btn-sm">Eliminar</button></a>
+              class="btn btn-danger btn-sm mb-2">Eliminar</button></a>
+          <a href="#" onclick="galeria({{n.id}})"><button type="button"
+              class="btn btn-warning btn-sm mb-2">Añadir imagen</button></a>
         </td>
       </tr>
       {% endfor %}
-
     </tbody>
   </table>
   <div>
@@ -65,5 +66,10 @@ Panel Administrativo - Caos News
   </div>
 </div>
 
+<script>
+  function galeria(id) {
+    document.getElementById("idNoticia").value = id;
+  }
+</script>
 
 {% endblock contenido %}
